syntax = "proto3";
package auth;
option go_package = "keymv.io/proto/auth";

//Define response body
message Request {
  string authToken = 1;
  string requestId = 2;
}

message Response {
  string orgid =1;  
}

service AuthEngine {
  rpc auth(Request) returns (Response) {}
}