syntax = "proto3";
package auth;
option go_package = "github.com/ilyatbn/keymv-proto/authengine/auth";

message Credentials{
  string username = 1;
  string password = 2;
  string requestId =3;
}

message ResponseToken {
  string token =1;  
}

message validationDataReq {
  string authUser = 1;
  string authPass = 2;
  string userinfo = 3;
}

message validationDataRes {
  string valid = 1;
  string orgId = 2;
  string role = 3;
}

service AuthEngine {
  rpc auth(Credentials) returns (ResponseToken) {}
  rpc validate(validationDataReq) returns (validationDataRes) {}
}